base/02-extern/04-grafana/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: grafana
  labels:
    environment: extern
    app: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.domain.tld`)
      kind: Rule
      services:
        - name: grafana-service
          port: 8111
      middlewares:
        - name: headers
          namespace: traefik
  tls:
    certResolver: default
    options:
      name: tls
      namespace: traefik
